--- a/src/main/resources/bootstrap-local.yaml
+++ b/src/main/resources/bootstrap-local.yaml
@@ -12,3 +12,8 @@ zuul:
       service-id: webhook
       stripPrefix: true
   retryable: true
+
+management.endpoints.web.exposure:
+  include: auditevents
+  exclude: bus-refresh
+
