--- a/src/main/resources/bootstrap-local.yaml
+++ b/src/main/resources/bootstrap-local.yaml
@@ -13,7 +13,6 @@ zuul:
       stripPrefix: true
   retryable: true
 
-management.endpoints.web.exposure:
-  include: auditevents
-  exclude: bus-refresh
+management.endpoints.web.exposure.include: prometheus
+
 
